--- a/package.json
+++ b/package.json
@@ -7,20 +7,25 @@
     "start": "node server.js",
     "dev": "node server.js",
     "crawler": "node crawler.js",
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "install:linux": "./scripts/install-linux.sh",
+    "start:linux": "./scripts/start-crawler.sh",
+    "stop:linux": "./scripts/stop-crawler.sh",
+    "start:pm2": "./scripts/start-crawler.sh --pm2",
+    "start:systemd": "./scripts/start-crawler.sh --systemd"
   },
   "dependencies": {
-    "puppeteer": "^21.5.0",
-    "cheerio": "^1.0.0-rc.12",
-    "csv-writer": "^1.6.0",
     "axios": "^1.6.0",
-    "https-proxy-agent": "^7.0.2",
+    "bcryptjs": "^2.4.3",
+    "cheerio": "^1.0.0-rc.12",
+    "cors": "^2.8.5",
+    "csv-writer": "^1.6.0",
+    "dotenv": "^17.2.1",
     "express": "^4.18.2",
     "express-session": "^1.17.3",
-    "socket.io": "^4.7.4",
-    "bcryptjs": "^2.4.3",
-    "cors": "^2.8.5",
-    "helmet": "^7.1.0"
+    "helmet": "^7.1.0",
+    "https-proxy-agent": "^7.0.2",
+    "puppeteer": "^21.5.0",
+    "socket.io": "^4.7.4"
   },
   "author": "",
   "license": "ISC"
