--- a/.env.example
+++ b/.env.example
@@ -31,15 +31,13 @@ CHROME_PATH=
 HEADLESS=new
 
 # =============================================================================
-# PROXY SETTINGS
+# PROXY SETTINGS - DISABLED FOR PRODUCTION
 # =============================================================================
 
-# Proxy URL (leave empty to disable proxy)
-PROXY_URL=http://proxybird:proxybird@155.254.39.107:6065
-
-# Proxy username and password (if different from URL)
-PROXY_USERNAME=proxybird
-PROXY_PASSWORD=proxybird
+# Proxy functionality has been disabled for production server environment
+# PROXY_URL=
+# PROXY_USERNAME=
+# PROXY_PASSWORD=
 
 # =============================================================================
 # CRAWLER SETTINGS
