--- a/package.json
+++ b/package.json
@@ -24,8 +24,7 @@
     "express-session": "^1.17.3",
     "helmet": "^7.1.0",
     "https-proxy-agent": "^7.0.2",
-    "puppeteer": "^21.5.0",
-    "socket.io": "^4.7.4"
+    "puppeteer": "^21.5.0"
   },
   "author": "",
   "license": "ISC"
